fix overflow

--- a/lessons/cssanimation/less/style.less
+++ b/lessons/cssanimation/less/style.less
@@ -7,27 +7,29 @@
     bottom: 0;
     right: 0;
     left: 0;
-    z-index: 101;
+    z-index: -1;
     margin: auto;
     opacity: 0;
     transition: opacity ease-in 0.6s;
     &.open {
         opacity: 1;
+        z-index: 101;
         & + .overlay {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            right: 0;
-            left: 0;
             z-index: 100;
-            background: grey;
             opacity: 0.5;
-            transition: opacity ease-in 0.6s;
         }
 
     }
     & + .overlay {
-        opacity: 0.5;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        z-index: -1;
+        background: grey;
+        opacity: 0;
+        transition: opacity ease-in 0.6s;
     }
 }
 
